--- a/SOCC/DFS/pom.xml
+++ b/SOCC/DFS/pom.xml
@@ -30,6 +30,12 @@
 		<java.version>24</java.version>
 	</properties>
 	<dependencies>
+	  <dependency>
+			<groupId>com.mysql</groupId>
+			<artifactId>mysql-connector-j</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+	
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
