--- a/SOCC/DFS/src/main/resources/application.properties
+++ b/SOCC/DFS/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=DFS
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/Soock
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/Sooc
 spring.datasource.username=root
-spring.datasource.password=@veste1010
+spring.datasource.password=Mortandela1010@1
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
